# Kutinfo

2x2 matrix/: CMakeLists.txt  main.cpp  matrix2.h  vector2.h
idomeres/: CMakeLists.txt  data.plt.txt  main.cpp  matrix.h  plot.txt
